<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:background="@drawable/sign_in"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="100dp"
            android:background="@drawable/logotext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/textLogin"
            android:text="@string/silahkan_login_untuk_memulai_aplikasi"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_below="@+id/logo"
            android:layout_marginBottom="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textLogin"
            android:layout_centerHorizontal="true"
            android:inputType="text"
            android:layout_marginBottom="@dimen/fab_margin"
            android:drawableStart="@drawable/ic_username"
            android:hint="@string/username"
            android:minHeight="48dp"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etUsername"
            android:layout_centerHorizontal="true"
            android:inputType="textPassword"
            android:layout_marginBottom="@dimen/fab_margin"
            android:drawableStart="@drawable/ic_password"
            android:hint="@string/password"
            android:minHeight="48dp"
            android:textAlignment="center" />

        <Button
            android:id="@+id/btnSign_in"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/etPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/fab_margin"
            android:background="#22000124"
            android:hint="@string/sign_in" />

        <TextView
            android:id="@+id/buatAkun"
            android:layout_below="@id/btnSign_in"
            android:hint="@string/create_a_new_account"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
</LinearLayout>